# small_dlio

./: .clangd  .gitignore  AGENTS.md  README.md  compile_commands.json  quick_source.sh
include/small_dlio/: point_types.hpp
include/small_dlio/odom_node/: include_reg.hpp  odom_node.hpp
src/: odom_node.cpp
src/dlio/: CMakeLists.txt  package.xml
src/dlio/config/: backend.yaml  config.yaml  dlio.rviz
src/dlio/include/small_dlio/: cart_context.hpp  gicp.hpp  loop_detector_node.hpp  map_node.hpp  point_types.hpp  pose_graph.hpp  small_gicp_compat.hpp
src/dlio/include/small_dlio/odom_node/: include_reg.hpp  odom_node.hpp
src/dlio/launch/: full.launch.py
src/dlio/msg/: KeyFrame.msg  OptimizedKeyFrames.msg
src/dlio/src/: cart_context.cpp  gicp.cpp  loop_detector_main.cpp  loop_detector_node.cpp  main.cpp  map_node.cpp  map_node_main.cpp  odom_node.cpp  pose_graph.cpp
